--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pollar-react</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="pollar-react" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/opengraph-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="/opengraph-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
