--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pollar-react</title>
+    <title>Pollar News</title>
 
     <!-- Open Graph -->
-    <meta property="og:title" content="pollar-react" />
+    <meta property="og:title" content="Pollar News" />
+    <meta property="og:description" content="Wszystkie najważniejsze wiadomości w jednym miejscu. AI porządkuje i streszcza dzisiejsze wydarzenia bez clickbaitów — tylko sprawdzone fakty." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/opengraph-image.jpg" />
     <meta property="og:image:width" content="1200" />
