--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pollar News" />
+    <meta name="twitter:description" content="Wszystkie najważniejsze wiadomości w jednym miejscu. AI porządkuje i streszcza dzisiejsze wydarzenia bez clickbaitów — tylko sprawdzone fakty." />
     <meta name="twitter:image" content="/opengraph-image.jpg" />
+
+    <!-- SEO -->
+    <meta name="description" content="Wszystkie najważniejsze wiadomości w jednym miejscu. AI porządkuje i streszcza dzisiejsze wydarzenia bez clickbaitów — tylko sprawdzone fakty." />
   </head>
   <body>
     <div id="root"></div>
