--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pollar News</title>
+    <title>__META_TITLE__</title>
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Pollar News" />
-    <meta property="og:description" content="Wszystkie najważniejsze wiadomości w jednym miejscu. AI porządkuje i streszcza dzisiejsze wydarzenia bez clickbaitów — tylko sprawdzone fakty." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/opengraph-image.jpg" />
+    <meta property="og:title" content="__OG_TITLE__" />
+    <meta property="og:description" content="__OG_DESCRIPTION__" />
+    <meta property="og:type" content="__OG_TYPE__" />
+    <meta property="og:image" content="__OG_IMAGE__" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Pollar News" />
-    <meta name="twitter:description" content="Wszystkie najważniejsze wiadomości w jednym miejscu. AI porządkuje i streszcza dzisiejsze wydarzenia bez clickbaitów — tylko sprawdzone fakty." />
-    <meta name="twitter:image" content="/opengraph-image.jpg" />
+    <meta name="twitter:title" content="__OG_TITLE__" />
+    <meta name="twitter:description" content="__OG_DESCRIPTION__" />
+    <meta name="twitter:image" content="__OG_IMAGE__" />
 
     <!-- SEO -->
-    <meta name="description" content="Wszystkie najważniejsze wiadomości w jednym miejscu. AI porządkuje i streszcza dzisiejsze wydarzenia bez clickbaitów — tylko sprawdzone fakty." />
+    <meta name="description" content="__OG_DESCRIPTION__" />
   </head>
   <body>
     <div id="root"></div>
